Splash screen code cleanup